soles-single view (WIP)

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -21,6 +21,8 @@
         initTimePicker();
         initSelect();
         initTooltips();
+        initSlider();
+        initMaterialBoxed();
     });
 
 </script>
