add ability to logout. closes #49

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -8,7 +8,7 @@
             <a href="#" data-target="slide-out"
                class="sidenav-trigger"><i class="material-icons teal-text lighten-2">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a class="black-text">Logout</a></li>
+                <li><a class="black-text" href="/logout">Logout</a></li>
             </ul>
 
         </nav>
