--- a/public/css/style.css
+++ b/public/css/style.css
@@ -205,6 +205,13 @@ main, footer {
     margin-top: 40px;
 }
 
+.truncate-tag {
+    max-width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 /* resources */
 
 @media only screen and (max-width:552px) {
