--- a/views/questions-single.hbs
+++ b/views/questions-single.hbs
@@ -27,9 +27,12 @@
                 </div>
                 <div class="row">
                     <div class="col s12">
-                        <div class="chip">
-                            Tag 1
-                        </div>
+                        {{#each question.tags}}
+                            <div class="chip truncate-tag tooltipped"
+                                 data-position="bottom" data-tooltip="{{this.text}}">
+                                {{this.text}}
+                            </div>
+                        {{/each}}
                     </div>
                 </div>
             {{else}}
@@ -73,13 +76,3 @@
         </div>
     </div>
 </div>
-
-<table class="striped responsive-table">
-    {{#each question}}
-        <tr>
-            <th>{{@key}}</th>
-            <td>{{this}}</td>
-        </tr>
-    {{/each}}
-
-</table>
