--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -13,5 +13,8 @@
 <script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
 <script type="text/javascript" src="/js/sole-config.js"></script>
 <script type="text/javascript">
+  // connect to parse server
+  Parse.initialize(soleConfig.appId);
+  Parse.serverURL = soleConfig.serverUrl;
   Parse.User.logOut();
 </script>
