--- a/views/partials/question-card.hbs
+++ b/views/partials/question-card.hbs
@@ -1,11 +1,7 @@
-<div class="col m12 l4 animated fadeIn"
-   style="-webkit-animation-duration:300ms;">
-  <div class="card blue lighten-1">
-    <div class="question-card card-content center-align">
-      <a href="/questions/{{id}}?sesh={{../sesh}}">
-      <div class="card-title white-text">{{text}}</div>
-      </a>
-
+<div class="card blue lighten-1 grid-item masonry-card">
+    <div class="card-content center-align">
+        <a href="/questions/{{id}}?sesh={{../sesh}}">
+            <div class="card-title white-text">{{text}}</div>
+        </a>
     </div>
-  </div>
 </div>
