--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -4,146 +4,174 @@
 </div>
 
 <div class="row" style="padding-top:40px;">
-	{{!-- <div class="col offset-s10 s2 offset-m9 m3 offset-l8 l4">
-		<a href="/questions/add?sesh={{sesh}}" class="btn-floating btn-large waves-effect waves-light red">
-			<i class="material-icons">add</i>
-		</a>
-	</div> --}}
-	<div class="col s12 offset-m1 m10 offset-l3 l6">
-		<div class="card-panel" style="padding-bottom:inherit;margin-top: -30px;">
+    {{!-- <div class="col offset-s10 s2 offset-m9 m3 offset-l8 l4">
+        <a href="/questions/add?sesh={{sesh}}" class="btn-floating btn-large waves-effect waves-light red">
+            <i class="material-icons">add</i>
+        </a>
+    </div> --}}
+    <div class="col s12 offset-m1 m10 offset-l3 l6">
+        <div class="card-panel" style="padding-bottom:inherit;margin-top: -30px;">
 
-			<form id="search-form" action="/questions" method="get" onsubmit="event.preventDefault(); getQuestions();">
-				<div class="row">
-					<h5 class="center-align" style="margin-bottom: 1em;">Explore Our Questions</h5>
+            <form id="search-form" action="/questions" method="get" onsubmit="event.preventDefault(); getQuestions();">
+                <div class="row">
+                    <h5 class="center-align" style="margin-bottom: 1em;">Explore Our Questions</h5>
 
-					<div class="input-field">
-						<input id="search" name="q" type="search"
+                    <div class="input-field">
+                        <i class="material-icons prefix">search</i>
+                        <input id="search" name="q" type="search"
                                class="keep-bottom"
                                placeholder="Search by keyword">
-                        <label class="no-transform" for="search"><i class="material-icons">search</i></label>
-					</div>
-          {{!-- <button type="button" name="button" class="waves-effect waves-light btn-large" onclick="getQuestions()">Search</button> --}}
+                    </div>
 
+                    <div class="row" id="standard-picker">
+                        <div class="col s12 m6">
+                            <label>Subject</label>
+                            <select id="subject" class="browser-default standard-picker">
+                                <option value="" disabled selected>Filter by subject</option>
+                                <option label="AmeriCorps" value="asn.d0000003">AmeriCorps</option>
+                                <option label="College Now" value="asn.d0000001">College Now</option>
+                                <option label="Community Health Worker Certification" value="asn.d0000002">Community Health Worker Certification</option>
+                                <option label="Dance" value="asn.d2466234">Dance</option>
+                                <option label="Drama/Theatre" value="asn.d2466454">Drama/Theatre</option>
+                                <option label="English Language Arts (Common Core)" value="asn.d10003fc">English Language Arts (Common Core)</option>
+                                <option label="Mathematics (Common Core)" value="asn.d10003fb">Mathematics (Common Core)</option>
+                                <option label="Music" value="asn.d2482974">Music</option>
+                                <option label="Next Generation Science Standards" value="asn.d2454348">Next Generation Science Standards</option>
+                                <option label="Physical Education" value="asn.d2716034">Physical Education</option>
+                                <option label="Science (High School)" value="asn.d2692656">Science (High School)</option>
+                                <option label="Science (K-8)" value="asn.d2462762">Science (K-8)</option>
+                                <option label="Social Studies (High School)" value="asn.d2463176">Social Studies (High School)</option>
+                                <option label="Social Studies (K-8)" value="asn.d2462866">Social Studies (K-8)</option>
+                                <option label="Technology" value="asn.d2465259">Technology</option>
+                                <option label="Visual Arts" value="asn.d2483255">Visual Arts</option>
+                                <option label="World Languages" value="asn.d2483559">World Languages</option>
+                            </select>
+                        </div>
+                        <div class="col s12 m6">
+                            <label>Grade <span style="color: pink;" >(subject required)</span></label>
+                            <select id="grade" class="browser-default standard-picker" disabled>
+                                <option value=""></option>
+                            </select>
+                        </div>
 
+                        <div id="refine">
+                        </div>
 
-          <div class="row" id="standard-picker">
-          <div class="input-field col s12 m6">
-              <label for="subject" class="active">Subject</label>
-              <select id="subject" class="browser-default standard-picker"><option label="AmeriCorps" value="asn.d0000003">AmeriCorps</option><option label="College Now" value="asn.d0000001">College Now</option><option label="Community Health Worker Certification" value="asn.d0000002">Community Health Worker Certification</option><option label="Dance" value="asn.d2466234">Dance</option><option label="Drama/Theatre" value="asn.d2466454">Drama/Theatre</option><option label="English Language Arts (Common Core)" value="asn.d10003fc">English Language Arts (Common Core)</option><option label="Mathematics (Common Core)" value="asn.d10003fb">Mathematics (Common Core)</option><option label="Music" value="asn.d2482974">Music</option><option label="Next Generation Science Standards" value="asn.d2454348">Next Generation Science Standards</option><option label="Physical Education" value="asn.d2716034">Physical Education</option><option label="Science (High School)" value="asn.d2692656">Science (High School)</option><option label="Science (K-8)" value="asn.d2462762">Science (K-8)</option><option label="Social Studies (High School)" value="asn.d2463176">Social Studies (High School)</option><option label="Social Studies (K-8)" value="asn.d2462866">Social Studies (K-8)</option><option label="Technology" value="asn.d2465259">Technology</option><option label="Visual Arts" value="asn.d2483255">Visual Arts</option><option label="World Languages" value="asn.d2483559">World Languages</option></select>
-          </div>
-          <div class="input-field col s12 m6">
-              <label for="grade" class="active">Grade <span style="color: pink;" >(subject required)</span></label>
-              <select id="grade" class="browser-default standard-picker" disabled>
-                <option value=""></option>
-              </select>
-          </div>
+                    </div>
 
-          <div id="refine">
-              {{!-- <!-- ngRepeat: level in refines --><div class="input-field col s12 m6 ng-scope" ng-repeat="level in refines" style="">
-                  <label for="refine-0" class="active ng-binding">Cognitive &amp; Creative Learning Process</label>
-                  <select id="refine-0" class="browser-default ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-model="selectedRefine[$index]" ng-options="item.get('rdn') as item.get('short') for item in level" ng-change="refineChanged($index)" style=""><option label="Perceiving/Knowing" value="asn.s2466235">Perceiving/Knowing</option><option label="Producing/Performing" value="asn.s2466236">Producing/Performing</option><option label="Responding/Reflecting" value="asn.s2466237">Responding/Reflecting</option></select>
-              </div><!-- end ngRepeat: level in refines -->
-
-              <div class="input-field col s12 m6 ng-scope" ng-repeat="level in refines" style="">
-                  <label for="refine-1" class="active ng-binding">Content Statement</label>
-                  <select id="refine-1" class="browser-default ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-model="selectedRefine[$index]" ng-options="item.get('rdn') as item.get('short') for item in level" ng-change="refineChanged($index)" style=""><option label="Discuss personal reactions to dances viewed or performed and consider how these are informed by cultural and social influences." value="asn.s2466394">Discuss personal reactions to dances viewed or performed and consider how these are informed by cultural and social influences.</option><option label="Identify ways that the same dance movement can be described differently, based on point of view." value="asn.s2466395">Identify ways that the same dance movement can be described differently, based on point of view.</option><option label="Reflect on how attention to physical sensations can impact movement experiences and performance." value="asn.s2466396">Reflect on how attention to physical sensations can impact movement experiences and performance.</option><option label="Reflect on, evaluate and refine choreographic, rehearsal and performance processes based on established criteria." value="asn.s2466398">Reflect on, evaluate and refine choreographic, rehearsal and performance processes based on established criteria.</option><option label="Use forms of writing (e.g., note-taking, graphic organizers, motif notation) to record choices made in the dance-making process." value="asn.s2466397">Use forms of writing (e.g., note-taking, graphic organizers, motif notation) to record choices made in the dance-making process.</option></select>
-              </div><!-- end ngRepeat: level in refines --> --}}
-          </div>
-
-      </div>
-
-				</div>
-			</form>
-		</div>
-	</div>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 <div class="row">
-	<div class="col s12 offset-l1 l10">
-		<div class="card-panel">
-			<div class="alert alert-danger">{{ errorText }}</div>
+    <div class="col s12">
+        <div class="card-panel">
+            <div class="alert alert-danger">{{ errorText }}</div>
 
-			<div class="row">
-				<div class="row" >
-          {{#if searchText}}
-          <h2>You searched for "<strong>{{searchText}}</strong>"</h2>
-          {{else}}
-					<h5 class="center-align">What are Big Questions?</h5>
+            <!--<div class="row">-->
+                <!--<h4>masonry</h4>-->
+                <!--<div class="col s12">-->
+                    <!--<div class="grid">-->
+                        <!--<div class="grid-item">-->
+                            <!--<div class="card-panel teal masonry-card">-->
+        <!--<span class="white-text">I am a very simple card. I am good at containing small bits of information.-->
+        <!--I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.-->
+        <!--</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="grid-item grid-item--width2">-->
+                            <!--<div class="card-panel teal masonry-card">-->
+        <!--<span class="white-text">I am a very simple card. I am good at containing small bits of information.-->
+        <!--I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.-->
+        <!--</span>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="grid-item">      <div class="card-panel teal masonry-card">-->
+        <!--<span class="white-text">I am a very simple card. I am good at containing small bits of information.-->
+        <!--I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.-->
+        <!--</span>-->
+                        <!--</div>-->
+                        <!--</div>-->
 
-					<p>Big questions do not have an easy answer, and often lead to more questions.
-						They inspire deep conversations and encourage children to offer theories, work collaboratively,
-						use reason and think critically.  Big questions vary; they often tie in with what children are
-						learning at school, come from their every day experiences, or maybe even something completely new.
-						They typically connect more than one subject area.</p>
-          {{/if}}
-          <div id="questions">
-          {{#if questions}}
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
 
 
-          {{#each questions}}
-            {{> question-card }}
-          {{/each}}
+            <div class="row">
 
-          {{else}}
-          <!-- No results -->
-          <div class="row" >
-            <div class="col s12 m8 offset-m2 l6 offset-l3" ui-sref="question-submit">
-              <div class="card red lighten-1">
-                <div class="question-card card-content center-align">
-                  <p class="card-title white-text text-darken-4 center-align valign">Nothing here...yet</p>
-                  <p class="flow-text white-text text-darken-4 center-align valign"
-                     style="margin:10px">
-                    Share your own questions with the SOLE community.<br>
-                  </p>
-                </div>
-              </div>
+                {{#if searchText}}
+                    <h2>You searched for "<strong>{{searchText}}</strong>"</h2>
+                {{else}}
+                {{/if}}
+                <div id="questions" class="grid">
+                    {{#if questions}}
+
+                        {{#each questions}}
+                            {{> question-card }}
+                        {{/each}}
+
+                    {{else}}
+                        <!-- No results -->
+                        <h5 class="center-align">What are Big Questions?</h5>
+                        <p>Big questions do not have an easy answer, and often lead to more questions.
+                            They inspire deep conversations and encourage children to offer theories, work collaboratively,
+                            use reason and think critically.  Big questions vary; they often tie in with what children are
+                            learning at school, come from their every day experiences, or maybe even something completely new.
+                            They typically connect more than one subject area.</p>
+                        <div class="row" >
+                            <div class="col s12 m8 offset-m2 l6 offset-l3" ui-sref="question-submit">
+                                <div class="card red lighten-1">
+                                    <div class="question-card card-content center-align">
+                                        <p class="card-title white-text text-darken-4 center-align valign">Nothing here...yet</p>
+                                        <p class="flow-text white-text text-darken-4 center-align valign"
+                                           style="margin:10px">
+                                            Share your own questions with the SOLE community.<br>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End No results -->
+                    {{/if}}
+                </div><!-- end #questions -->
+
             </div>
-          </div>
-          <!-- End No results -->
-          {{/if}}
-        </div><!-- end #questions -->
 
-				</div>
-
-
-			</div>
-
-
-
-
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+<script type="text/javascript" src="/js/masonry-layout/dist/masonry.pkgd.min.js"></script>
+<script type="text/javascript" src="/js/masonry.pkgd.min.js"></script>
 
 
 {{!-- this is duplicated code. we currently need it. but a copy of it also exists in the backend for the templating engine and here for use with the frontend. JFYI. We should remove one of these at some point in the future. -DW 2018-06-22 --}}
 {{!-- //FYI this has escapes before the {{}}'s because this is in a HBS file. this isn't needed on the backend HBS version --}}
 <script id="question-card-template" type="text/x-handlebars-template">
-  <div class="col m12 l4 animated fadeIn"
-     style="-webkit-animation-duration:300ms;">
-    <div class="card blue lighten-1">
-      <div class="question-card card-content center-align">
-        <a href="/questions/\{{id}}?sesh=\{{sesh}}">
-        <div class="card-title white-text">\{{text}}</div>
-        </a>
+        <div class="card blue lighten-1 grid-item masonry-card">
+            <div class="card-content center-align">
+                <a href="/questions/\{{id}}?sesh=\{{sesh}}">
+                    <div class="card-title white-text">\{{text}}</div>
+                </a>
 
-      </div>
-    </div>
-  </div>
+            </div>
+        </div>
 </script>
 
 {{!-- this is a handlebars template for the dropdown for tags --}}
 <script id="standard-picker-template" type="text/x-handlebars-template">
-  <div class="input-field col s12 m6">
-    <!-- <label for="refine-\{{rdn}}" class="active">Domain</label> -->
-    <select class="browser-default standard-picker" onchange="itChanged($(this))" >
-      <option value=""></option>
-      \{{#each standards}}
-      <option value="\{{rdn}}">\{{short}}</option>
-      \{{/each}}
+    <div class="input-field col s12 m6">
+        <!-- <label for="refine-\{{rdn}}" class="active">Domain</label> -->
+        <select class="browser-default standard-picker" onchange="itChanged($(this))" >
+            <option value=""></option>
+            \{{#each standards}}
+            <option value="\{{rdn}}">\{{short}}</option>
+            \{{/each}}
     </div>
 </script>
 
@@ -152,6 +180,4 @@
 
 <script type="text/javascript" src="/js/sole-config.js"></script>
 <script type="text/javascript" src="/js/questions.js"></script>
-<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+
