WIP register user

--- a/views/complete-profile.hbs
+++ b/views/complete-profile.hbs
@@ -112,7 +112,8 @@
                     <label>What subject(s) do you teach?</label>
                 </div>
             </div>
-
+        <button type="button" class="btn-large" name="button">submit</button>
         </div>
+
     </div>
 </div>
