--- a/views/layouts/prelogin.hbs
+++ b/views/layouts/prelogin.hbs
@@ -17,6 +17,11 @@
 <meta name="google-signin-client_id" content="824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com">
 <script src="https://apis.google.com/js/platform.js?onload=appStart" async defer></script>
 <script type="text/javascript" src="/js/login.js"></script>
+<script type="text/javascript">
+  // connect to parse server
+  Parse.initialize(soleConfig.appId);
+  Parse.serverURL = soleConfig.serverUrl;
+</script>
 
 </body>
 </html>
