--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -170,16 +170,12 @@
                             <div class="card-content lp-stats">
                                 <span class="card-title center-align">Recommended Timing</span>
                                 <div class="row"></div>
-                                <div class="row">
-                                    <div class="col s12 red-text">
-                                        SAMPLE CONTENT FOR TESTING
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col s12">
-                                        <div id="test-slider"></div>
-                                    </div>
-                                </div>
+
+                                <!--<div class="row">-->
+                                    <!--<div class="col s12">-->
+                                        <!--<div id="test-slider"></div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
 
                                 <div class="row">
                                     <div class="col m4 right-align hide-on-small-only">
@@ -413,5 +409,5 @@
     </div>
 </div>
 
-<script type="text/javascript" src="/js/nouislider.min.js"></script>
-<script type="text/javascript" src="/js/soles-add.js"></script>
+<!--<script type="text/javascript" src="/js/nouislider.min.js"></script>-->
+<!--<script type="text/javascript" src="/js/soles-add.js"></script>-->
