added HRSA questions and updating SOLEs

--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -34,6 +34,7 @@
                                 <option label="Dance" value="asn.d2466234">Dance</option>
                                 <option label="Drama/Theatre" value="asn.d2466454">Drama/Theatre</option>
                                 <option label="English Language Arts (Common Core)" value="asn.d10003fc">English Language Arts (Common Core)</option>
+                                <option label="HRSA (ACT test)" value="asn.d1000004">HRSA (ACT test)</option>
                                 <option label="Mathematics (Common Core)" value="asn.d10003fb">Mathematics (Common Core)</option>
                                 <option label="Music" value="asn.d2482974">Music</option>
                                 <option label="Next Generation Science Standards" value="asn.d2454348">Next Generation Science Standards</option>
