--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -15,6 +15,7 @@
         <div class="card-panel">
             <form id="soles-add-form" action="/sole-create" method="post">
               <input type="hidden" name="sesh" value="{{sesh}}">
+              <input type="hidden" name="sole_id" value="{{sole.id}}">
               <div class="row" >
 
 
