--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -24,6 +24,8 @@
                     </div>
                     <input type="hidden" name="source" id="source" value="https://startsole.org">
                     {{!-- <standard-picker tags="Submit.tags"></standard-picker> --}}
+                    {{>standard-picker}}
+                    <input type="hidden" id="tags" name="tags" value="">
                     <div class="row">
                         <div class="input-field col s12 center">
                             <button class="btn waves-effect waves-light">
@@ -37,3 +39,10 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+{{>question-templates}}
+<script type="text/javascript" src="/js/sole-config.js"></script>
+<script type="text/javascript" src="/js/questions.js"></script>
