--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -227,7 +227,7 @@
                 <!--content objective-->
                 <div class="input-field col s12 m10 offset-m1">
                     <select id="grade" name="content_objective" required>
-                        {{#select sole.content_objective}}
+                        {{#select sole.content_objective.value}}
                         <option value="" disabled selected>Choose a content knowledge objective</option>
                         <option value="objective.content.standard">Introducing students to a new concept</option>
                         <option value="objective.content.prior">Helping students connect prior knowledge to a current topic</option>
