--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,7 +3,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
-    <link type="text/css" rel="stylesheet" href="/css/nouislider.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/dropzone.min.css"  media="screen,projection"/>
     <!--Import stylesheet-->
     <link type="text/css" rel="stylesheet" href="/css/style.css"  media="screen,projection"/>
 
