--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -18,7 +18,7 @@
                     <div class="row">
                         <div class="input-field col s12">
                           <input type="hidden" name="sesh" value="{{sesh}}">
-                            <textarea id="text" name="text" class="materialize-textarea"
+                            <textarea id="text" name="text" class="materialize-textarea" required
                                       placeholder="Enter your question here"></textarea>
                         </div>
                     </div>
