--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -16,11 +16,13 @@
 
 
             <h3>Upload Photos</h3>
-            <form action="/file-upload"
+            {{!-- <form action="/file-upload"
                   class="dropzone"
-                  id="my-awesome-dropzone"></form>
+                  id="my-awesome-dropzone"></form> --}}
 
-            <form action="#">
+            <form id="reflect-form" method="post" action="/sole-reflect">
+              <input type="hidden" name="sesh" id="sesh" value="{{sesh}}">
+              <input type="hidden" name="sole_id" value="{{sole.id}}">
 
                 <div class="row">
                     <div class="col s12">
@@ -28,10 +30,10 @@
                         <div class="file-field input-field">
                             <div class="btn">
                                 <span>Upload Photos</span>
-                                <input type="file" multiple>
+                                <input type="file" id="photoUpload" name="files" multiple>
                             </div>
                             <div class="file-path-wrapper">
-                                <input class="file-path validate" type="text" placeholder="Upload one or more photos">
+                                <input class="file-path validate" type="text" name="files-text" placeholder="Upload one or more photos">
                             </div>
                         </div>
                     </div>
@@ -100,7 +102,9 @@
 
 
 
-
+                <div class="row">
+                    <input type="submit" value="Save" class="waves-effect waves-light btn">
+                </div>
             </form>
 
 
@@ -135,4 +139,8 @@
     </tbody>
 </table>
 
+<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
+<script type="text/javascript" src="/js/sole-config.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="/js/dropzone.min.js"></script>
+<script type="text/javascript" src="/js/img-upload.js"></script>
