--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col m12 l6">
                         <div class="input-field">
-                            <select>
+                            <select name="content_objective_achieved">
                                 <option value="" disabled selected>Choose your option</option>
                                 <option value="reflect.agree.strongly_agree">Strongly Agree</option>
                                 <option value="reflect.agree.agree">Agree</option>
@@ -63,7 +63,8 @@
                         </div>
                     </div>
                     <div class="input-field col m12 l6">
-                        <input value="" id="content_objective_why" type="text" class="validate">
+                        <input name="content_objective_achieved_why" id="content_objective_why" type="text"
+                               class="validate">
                         <label class="active" for="content_objective_why">Why do you think this?</label>
                     </div>
                 </div>
@@ -76,7 +77,7 @@
                     </div>
                     <div class="col m12 l6">
                         <div class="input-field">
-                            <select>
+                            <select name="dok">
                                 <option value="" disabled selected>Choose your option</option>
                                 <option value="reflection.type_of_thinking.recall">Recall and Reproduction</option>
                                 <option value="reflection.type_of_thinking.skill">Skill/Concept</option>
@@ -87,7 +88,7 @@
                         </div>
                     </div>
                     <div class="input-field col m12 l6">
-                        <input value="" id="dok_why" type="text" class="validate">
+                        <input name="dok_why" id="dok_why" type="text" class="validate">
                         <label class="active" for="dok_why">Why do you think this?</label>
                     </div>
                 </div>
@@ -163,7 +164,7 @@
                     </div>
                     <div class="col m12 l6">
                         <div class="input-field">
-                            <select>
+                            <select name="ground_rules">
                                 <option value="" disabled selected>Choose your option</option>
                                 <option value="true">Yes</option>
                                 <option value="false">No</option>
@@ -180,7 +181,7 @@
                     </div>
                     <div class="col m12 l6">
                         <div class="input-field">
-                            <select>
+                            <select name="needs_help">
                                 <option value="" disabled selected>Choose your option</option>
                                 <option value="true">Yes</option>
                                 <option value="false">No</option>
@@ -199,8 +200,8 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">mode_edit</i>
-                        <textarea id="notes" class="materialize-textarea"></textarea>
-                        <label for="Notes">Additional Notes for your Records</label>
+                        <textarea name="notes" id="notes" class="materialize-textarea"></textarea>
+                        <label for="notes">Additional Notes for your Records</label>
                     </div>
                 </div>
 
